always-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: always-pod
spec:
  restartPolicy: Always #is the default restartPolicy
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10']
