nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: k8s-worker2
  containers:
  - name: nginx
    image: nginx:1.19.1
