onfailure-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: onfailure-pod2
spec:
  restartPolicy: OnFailure
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10; this is a bad command that will fail']
