resource-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    resources:
      requests:
        cpu: "250m" # 1/4 of 1 CPU
        memory: "128Mi"
      limits:
        cpu: "500m" # 1/2 of 1 CPU
        memory: "256Mi"
